src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
	--branding-secondary: #3d3938;

	--dark: #313131;
	--dark_secondary: #464545;
	--dark_accent: #1d1d1d;

	--light: #f2f2f2;
	--light_secondary: #eeebeb;
	--light_accent: #e8e8e8;

	--text: var(--dark);
	--text-inverse: var(--light);

	--bg-primary: var(--light_secondary);

	--primary: var(--light);
	--secondary: var(--light_secondary);
	--accent: var(--light_accent);
}

.dark-theme {
	--text: var(--light);
	--text-inverse: var(--dark);
	--bg-primary: var(--dark_secondary);

	--primary: var(--dark);
	--secondary: var(--dark_secondary);
	--accent: var(--dark_accent);
}

/* Mobile Only */
@media screen and (max-width: 768px) {
	#pageWrapper {
		margin: 5%;
	}
}

/* Desktop only */
@media screen and (min-width: 768px) {
	#pageWrapper {
		margin: 3%;
	}
}
p,
h1,
h2,
h3,
h4,
h5,
i,
b,
a {
	color: var(--text);
}

a {
	text-decoration-line: underline;
}

h1 {
	font-size: xx-large;
}

h2 {
	font-size: x-large;
}

h3 {
	font-size: large;
}

body {
	background-color: var(--bg-primary);
}

#navbar {
	display: flex;
	background-color: var(--branding-secondary);
}

#navbar__hamburger {
	background-color: transparent;
	border: none;
	cursor: pointer;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	justify-self: end;
	width: 30px;
	height: 3rem;
	padding-top: 12px;
	padding-bottom: 12px;
	margin-right: 12px;
}

.navbar__hamburger__bar {
	color: var(--light);
	background-color: var(--light);
	height: 3px;
	width: 100%;
	transition: background-color 0.3s ease-in-out;
}

div.navbar__links {
	z-index: 1;
	flex-direction: column;
	background-color: var(--branding-secondary);
}

nav > div.navbar__links {
	height: fit-content;
	width: 100%;
	justify-content: flex-end;
	display: flex;
	padding-right: 1rem;
}

.navbar__button {
	height: 100%;
	padding-left: 1rem;
	padding-right: 1rem;
	color: var(--light);
	background-color: var(--branding-secondary);
}

.navbar__button:hover {
	background-color: var(--dark);
	color: var(--light);
}

.navbar__button > button {
	width: 100%;
	height: 100%;
}

#navbar__branding__link {
	margin: 10px;
	display: inline-flex;
	width: min-content;
	text-decoration-line: none;
}

#navbar__branding__link > button {
	color: var(--light);
	margin-left: 5px;
	margin-right: 20px;
}

div.columns {
	display: flex;
	flex-wrap: wrap;
}

div.column {
	flex: 1;
	padding: 10px;
	box-sizing: border-box;
	min-width: max-content;
}

@media (max-width: 768px) {
	div.columns {
		flex-direction: column;
	}
}

div.card {
	background-color: var(--primary);
	padding: 2em;
	border-radius: 10px;
}

select {
	color: var(--text);
	background-color: var(--accent);
	width: 100%;
	height: 50px;
	margin-top: 1em;
	margin-bottom: 1em;
	padding-left: 1em;
	margin-right: 1em;
	border-radius: 10px;
	/* Remove the default arrow */
	appearance: none;
}

select:hover,
select:hover::after {
	cursor: pointer;
}

label {
	color: var(--text);
}

